# pharma-project

./: .gitignore  CMakeLists.txt  README.md  execute.sh  main.py  requirements.txt
python/: data_manipulation.py  download_chemberta.py  embedding_chemBerta.py  vae.py
python/model/: vae.py
scripts/: execute.sh  test_1.py
src/: main.cpp
